--- a/FaqAI.ipynb
+++ b/FaqAI.ipynb
@@ -316,7 +316,7 @@
     {
       "cell_type": "code",
       "source": [
-        "llm = LLM(api_key='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')\n",
+        "llm = LLM(api_key='OPENAI_API_KEY')\n",
         "rag_system = RAGSystem(retriever, llm)"
       ],
       "metadata": {
