--- a/FaqAI.ipynb
+++ b/FaqAI.ipynb
@@ -316,7 +316,7 @@
     {
       "cell_type": "code",
       "source": [
-        "llm = LLM(api_key='OPENAI_API_KEY')\n",
+        "llm = LLM(api_key=os.environ['OPENAI_API_KEY'])\n",
         "rag_system = RAGSystem(retriever, llm)"
       ],
       "metadata": {
